# xiaozhi-esp32

./: CLAUDE.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/microfrontend/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml
main/audio/: audio_service.cc
main/audio/wake_words/: micro_wake_word.cc  micro_wake_word.h  oi_enzo_model.h
main/boards/waveshare/esp32-s3-touch-lcd-1.85c/: config.h  esp32-s3-touch-lcd-1.85c.cc  pager_ai_color.h  pager_ai_poll.cc  pager_ai_poll.h  pager_ai_usage.h  pager_alert_queue.h  pager_http.cc  pager_http.h  pager_mode.cc  pager_mode.h  pager_screen.cc  pager_screen.h
test/pager/: .gitignore  Makefile  test_ai_color.cpp  test_ai_usage.cpp  test_alert_queue.cpp
